KuberenetesDeployment/istio/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: minikube-example.com
      http:
        paths:
          - path: /service1
            pathType: Prefix
            backend:
              service:
                name: service1-service
                port:
                  number: 80
          - path: /service2
            pathType: Prefix
            backend:
              service:
                name: service2-service
                port:
                  number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service2-virtualservice
spec:
  hosts:
    - minikube-example.com
  http:
    - match:
        - uri:
            prefix: /service2
      route:
        - destination:
            host: service2-service
            port:
              number: 80
