KuberenetesDeployment/istio/service2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service2-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: service2
  template:
    metadata:
      labels:
        app: service2
    spec:
      containers:
        - name: service2
          image: somusumit/service2:latest
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: service2-service
spec:
  selector:
    app: service2
  ports:
    - port: 80
      targetPort: 3000
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: service2-destination-rule
spec:
  host: service2-service
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
